bugfix(SuggestedActions): Fixed a bug where suggested actions would disappear behind a multiline shell

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -107,7 +107,8 @@
         position: absolute;
         right: 0;
         transition: height $actionTransition;
-
+        @include shellLinesAffect(bottom);
+        
         .wc-hscroll > ul {
             height: $actionsHeight;
             padding: 2px 3px;
